repair bug in Home Page, (Title Page not responsive)

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -15,7 +15,7 @@
 .home-title {
   margin-top: 100px;
   font-size: 21px;
-  width: 1000px;
+  /* width: 1000px; */
   background: transparent;
   /* border: 2px solid rgba(255, 255, 255, 0.2); */
   backdrop-filter: blur(20px);
@@ -40,11 +40,13 @@
 }
 
 .home-description-1 {
+  margin-top: 25px;
   padding: 10px;
   text-align: center;
 }
 
 .home-description-2 {
+  margin-top: 5px;
   padding: 10px;
   text-align: center;
 }
